tests/snapshots/fixtures/log__1500.snap
---
source: tests/snapshots.rs
expression: rendered
---
.github/
    workflows/
        main.yml
.gitignore
CHANGELOG.md
Cargo.toml
    1→[package]
    3→name = "log"
    4→version = "0.4.29" # remember to update html_root_url
    5→authors = ["The Rust Project Developers"]
    6→license = "MIT OR Apache-2.0"
    7→readme = "README.md"
    8→repository = "https://github.com/rust-lang/log"
    9→documentation = "https://docs.rs/log"
    10→description = """
    11→A lightweight logging facade for Rust
    12→"""
    13→categories = ["development-tools::debugging"]
    14→keywords = ["logging"]
    15→exclude = ["rfcs/**/*"]
    16→rust-version = "1.68.0"
    17→edition = "2021"
LICENSE-APACHE
LICENSE-MIT
README.md
    1→log
    2→===
    4→A Rust library providing a lightweight logging *facade*.
benches/
    value.rs
rfcs/
    0296-structured-logging.md
src/
    __private_api.rs
        10→pub type Value<'a> = &'a str;
        37→/// The global logger proxy.
        39→pub struct GlobalLogger;
        84→pub fn log<'a, K, L>(
        85→    logger: L,
        86→    args: Arguments,
        87→    level: Level,
        88→    target_module_path_and_loc: &(&str, &'static str, &'static Location),
        89→    kvs: K,
        90→) where
        91→    K: KVs<'a>,
        92→    L: Log,
        93→{
        …
        103→pub fn enabled<L: Log>(logger: L, level: Level, target: &str) -> bool {
        …
        108→pub fn loc() -> &'static Location<'static> {
        …
    kv/
        error.rs
            3→/// An error encountered while working with structured data.
            5→pub struct Error {
            6→    inner: Inner,
            7→}
        key.rs
            7→pub trait ToKey {
            8→    /// Perform the conversion.
            9→    fn to_key(&self) -> Key<'_>;
            10→}
            37→pub struct Key<'k> {
            38→    // NOTE: This may become `Cow<'k, str>`
            39→    key: &'k str,
            40→}
        mod.rs
        source.rs
        value.rs
            1129→macro_rules! as_debug {
            1130→    ($capture:expr) => {
            1131→        $crate::kv::Value::from_debug(&$capture)
            1132→    };
            1133→}
            1139→macro_rules! as_display {
            1140→    ($capture:expr) => {
            1141→        $crate::kv::Value::from_display(&$capture)
            1142→    };
            1143→}
            1149→macro_rules! as_error {
            1150→    ($capture:expr) => {
            1151→        $crate::kv::Value::from_dyn_error(&$capture)
            1152→    };
            1153→}
            1159→macro_rules! as_serde {
            1160→    ($capture:expr) => {
            1161→        $crate::kv::Value::from_serde(&$capture)
            1162→    };
            1163→}
            1169→macro_rules! as_sval {
            1170→    ($capture:expr) => {
            1171→        $crate::kv::Value::from_sval(&$capture)
            1172→    };
            1173→}
    lib.rs
        399→use std::cfg;
        401→use std::error;
        402→use std::str::FromStr;
        403→use std::{cmp, fmt, mem};
        406→mod macros;
        407→mod serde;
        410→pub mod kv;
        413→use std::sync::atomic::{AtomicUsize, Ordering};
        416→use std::cell::Cell;
        418→use std::sync::atomic::Ordering;
        1600→pub mod __private_api;
        1627→mod tests {
        …
    macros.rs
        75→macro_rules! log {
        …
        119→macro_rules! __log {
        …
        165→macro_rules! error {
        …
        204→macro_rules! warn {
        …
        252→macro_rules! info {
        …
        292→macro_rules! debug {
        …
        336→macro_rules! trace {
        …
        391→macro_rules! log_enabled {
        …
        415→macro_rules! __log_enabled {
        …
        429→macro_rules! __log_logger {
        …
        445→macro_rules! __log_key {
        …
        459→macro_rules! __log_key {
        …
        468→macro_rules! __log_value {
        …
        517→macro_rules! __log_value {
        …
        526→macro_rules! __log_value_sval {
        …
        535→macro_rules! __log_value_sval {
        …
        544→macro_rules! __log_value_serde {
        …
        553→macro_rules! __log_value_serde {
        …
        564→macro_rules! __log_value_error {
        …
        573→macro_rules! __log_value_error {
        …
    serde.rs
test_max_level_features/
    Cargo.toml
        1→[package]
        2→name = "optimized"
        3→version = "0.1.0"
        4→edition = "2021"
        5→publish = false
        7→[[bin]]
        8→name = "test_max_level_features"
        9→path = "main.rs"
    main.rs
        1→use log::{debug, error, info, trace, warn, Level, LevelFilter, Log, Metadata, Record};
        2→use std::sync::{Arc, Mutex};
        5→use log::set_boxed_logger;
        17→impl Log for Logger {
        18→    fn enabled(&self, _: &Metadata) -> bool {
        …
        22→    fn log(&self, record: &Record) {
        …
        26→    fn flush(&self) {}
        …
tests/
    integration.rs
    macros.rs
triagebot.toml
