tests/snapshots/fixtures/log__6000.snap
---
source: tests/snapshots.rs
expression: rendered
---
.github/
    workflows/
        main.yml
.gitignore
CHANGELOG.md
Cargo.toml
    1→[package]
    3→name = "log"
    4→version = "0.4.29" # remember to update html_root_url
    5→authors = ["The Rust Project Developers"]
    6→license = "MIT OR Apache-2.0"
    7→readme = "README.md"
    8→repository = "https://github.com/rust-lang/log"
    9→documentation = "https://docs.rs/log"
    10→description = """
    11→A lightweight logging facade for Rust
    12→"""
    13→categories = ["development-tools::debugging"]
    14→keywords = ["logging"]
    15→exclude = ["rfcs/**/*"]
    16→rust-version = "1.68.0"
    17→edition = "2021"
    22→[features]
    23→max_level_off   = []
    24→max_level_error = []
    25→max_level_warn  = []
    26→max_level_info  = []
    27→max_level_debug = []
    28→max_level_trace = []
    30→release_max_level_off   = []
    31→release_max_level_error = []
    32→release_max_level_warn  = []
    33→release_max_level_info  = []
    34→release_max_level_debug = []
    35→release_max_level_trace = []
    37→std = []
    39→kv = []
    40→kv_sval = ["kv", "value-bag/sval", "sval", "sval_ref"]
    41→kv_std = ["std", "kv", "value-bag/error"]
    42→kv_serde = ["kv_std", "value-bag/serde", "serde"]
    44→# This is here to not break backwards compatibility with the implicit feature
    45→# that enables support for serde based on the dependency name. Since we're now
    46→# using serde_core, the implicit feature was renamed, this adds back an alias.
    47→serde = ["serde_core"]
    49→# Deprecated: use `kv_*` instead
    50→# These `*_unstable` features will be removed in a future release
    51→kv_unstable = ["kv", "value-bag"]
    52→kv_unstable_sval = ["kv_sval", "kv_unstable"]
    53→kv_unstable_std = ["kv_std", "kv_unstable"]
    54→kv_unstable_serde = ["kv_serde", "kv_unstable_std"]
    56→[dependencies]
    57→serde_core = { version = "1.0", optional = true, default-features = false }
    58→sval = { version = "2.16", optional = true, default-features = false }
    59→sval_ref = { version = "2.16", optional = true, default-features = false }
    60→value-bag = { version = "1.12", optional = true, default-features = false, features = ["inline-i128"] }
    62→[dev-dependencies]
    63→serde = { version = "1.0", features = ["derive"] }
    64→serde_json = { version = "1.0" }
    65→serde_test = { version = "1.0" }
    66→sval = { version = "2.16" }
    67→sval_derive = { version = "2.16" }
    68→value-bag = { version = "1.12", features = ["test"] }
    70→# NOTE: log doesn't actually depend on this crate. However, our dependencies,
    71→# serde and sval, dependent on version 1.0 of the crate, which has problem fixed
    72→# in 1.0.60, specifically in the following commit
    73→# https://github.com/dtolnay/proc-macro2/commit/e31d61910049e097afdd3d27c37786309082bdcb.
    74→# By defining the crate as direct dependency we can increase its minimal
    75→# version making the minimal (crate) version CI happy.
    76→proc-macro2 = { version = "1.0.63", default-features = false }
LICENSE-APACHE
LICENSE-MIT
README.md
    1→log
    2→===
    4→A Rust library providing a lightweight logging *facade*.
benches/
    value.rs
rfcs/
    0296-structured-logging.md
        1→- Feature Name: `structured_logging`
        2→- Start Date: 2019-03-11
        3→- RFC PR: [log/rfcs#0296](https://github.com/rust-lang-nursery/log/pull/296)
src/
    __private_api.rs
        10→pub type Value<'a> = &'a str;
        37→/// The global logger proxy.
        39→pub struct GlobalLogger;
        84→pub fn log<'a, K, L>(
        85→    logger: L,
        86→    args: Arguments,
        87→    level: Level,
        88→    target_module_path_and_loc: &(&str, &'static str, &'static Location),
        89→    kvs: K,
        90→) where
        91→    K: KVs<'a>,
        92→    L: Log,
        93→{
        …
        103→pub fn enabled<L: Log>(logger: L, level: Level, target: &str) -> bool {
        …
        108→pub fn loc() -> &'static Location<'static> {
        …
    kv/
        error.rs
            3→/// An error encountered while working with structured data.
            5→pub struct Error {
            6→    inner: Inner,
            7→}
        key.rs
            6→/// A type that can be converted into a [`Key`](struct.Key.html).
            7→pub trait ToKey {
            8→    /// Perform the conversion.
            9→    fn to_key(&self) -> Key<'_>;
            10→}
            37→pub struct Key<'k> {
            38→    // NOTE: This may become `Cow<'k, str>`
            39→    key: &'k str,
            40→}
        mod.rs
            246→mod error;
            247→mod key;
            250→mod source;
            252→mod value;
            254→pub use self::error::Error;
            255→pub use self::key::{Key, ToKey};
            256→pub use self::source::{Source, VisitSource};
            257→pub use self::value::{ToValue, Value, VisitValue};
            260→pub mod source;
            262→pub mod value;
            265→pub use self::source::Visitor;
        source.rs
            51→pub trait Source {
            52→    /// Visit key-values.
            53→    ///
            54→    /// A source doesn't have to guarantee any ordering or uniqueness of key-values.
            55→    /// If the given visitor returns an error then the source may early-return with it,
            56→    /// even if there are more key-values.
            57→    ///
            58→    /// # Implementation notes
            59→    ///
            60→    /// A source should yield the same key-values to a subsequent visitor unless
            61→    /// that visitor itself fails.
            62→    fn visit<'kvs>(&'kvs self, visitor: &mut dyn VisitSource<'kvs>) -> Result<(), Error>;
            64→    /// Get the value for a given key.
            65→    ///
            66→    /// If the key appears multiple times in the source then which key is returned
            67→    /// is implementation specific.
            68→    ///
            69→    /// # Implementation notes
            70→    ///
            71→    /// A source that can provide a more efficient implementation of this method
            72→    /// should override it.
            73→    fn get(&self, key: Key) -> Option<Value<'_>> {
            74→        get_default(self, key)
            75→    }
            77→    /// Count the number of key-values that can be visited.
            78→    ///
            79→    /// # Implementation notes
            80→    ///
            81→    /// A source that knows the number of key-values upfront may provide a more
            82→    /// efficient implementation.
            83→    ///
            84→    /// A subsequent call to `visit` should yield the same number of key-values.
            85→    fn count(&self) -> usize {
            86→        count_default(self)
            87→    }
            88→}
            235→pub trait VisitSource<'kvs> {
            236→    /// Visit a key-value pair.
            237→    fn visit_pair(&mut self, key: Key<'kvs>, value: Value<'kvs>) -> Result<(), Error>;
            238→}
        value.rs
            1129→macro_rules! as_debug {
            1130→    ($capture:expr) => {
            1131→        $crate::kv::Value::from_debug(&$capture)
            1132→    };
            1133→}
            1139→macro_rules! as_display {
            1140→    ($capture:expr) => {
            1141→        $crate::kv::Value::from_display(&$capture)
            1142→    };
            1143→}
            1149→macro_rules! as_error {
            1150→    ($capture:expr) => {
            1151→        $crate::kv::Value::from_dyn_error(&$capture)
            1152→    };
            1153→}
            1159→macro_rules! as_serde {
            1160→    ($capture:expr) => {
            1161→        $crate::kv::Value::from_serde(&$capture)
            1162→    };
            1163→}
            1169→macro_rules! as_sval {
            1170→    ($capture:expr) => {
            1171→        $crate::kv::Value::from_sval(&$capture)
            1172→    };
            1173→}
    lib.rs
        399→use std::cfg;
        401→use std::error;
        402→use std::str::FromStr;
        403→use std::{cmp, fmt, mem};
        406→mod macros;
        407→mod serde;
        410→pub mod kv;
        413→use std::sync::atomic::{AtomicUsize, Ordering};
        416→use std::cell::Cell;
        418→use std::sync::atomic::Ordering;
        1600→pub mod __private_api;
        1627→mod tests {
        …
    macros.rs
        75→macro_rules! log {
        76→    // log!(logger: my_logger, target: "my_target", Level::Info, "a {} event", "log");
        77→    (logger: $logger:expr, target: $target:expr, $lvl:expr, $($arg:tt)+) => ({
        78→        $crate::__log!(
        79→            logger: $crate::__log_logger!($logger),
        80→            target: $target,
        81→            $lvl,
        82→            $($arg)+
        83→        )
        84→    });
        86→    // log!(logger: my_logger, Level::Info, "a log event")
        87→    (logger: $logger:expr, $lvl:expr, $($arg:tt)+) => ({
        88→        $crate::__log!(
        89→            logger: $crate::__log_logger!($logger),
        90→            target: $crate::__private_api::module_path!(),
        91→            $lvl,
        92→            $($arg)+
        93→        )
        94→    });
        96→    // log!(target: "my_target", Level::Info, "a log event")
        97→    (target: $target:expr, $lvl:expr, $($arg:tt)+) => ({
        98→        $crate::__log!(
        99→            logger: $crate::__log_logger!(__log_global_logger),
        100→            target: $target,
        101→            $lvl,
        102→            $($arg)+
        103→        )
        104→    });
        106→    // log!(Level::Info, "a log event")
        107→    ($lvl:expr, $($arg:tt)+) => ({
        108→        $crate::__log!(
        109→            logger: $crate::__log_logger!(__log_global_logger),
        110→            target: $crate::__private_api::module_path!(),
        111→            $lvl,
        112→            $($arg)+
        113→        )
        114→    });
        115→}
        119→macro_rules! __log {
        …
        165→macro_rules! error {
        166→    // error!(logger: my_logger, target: "my_target", key1 = 42, key2 = true; "a {} event", "log")
        167→    // error!(logger: my_logger, target: "my_target", "a {} event", "log")
        168→    (logger: $logger:expr, target: $target:expr, $($arg:tt)+) => ({
        169→        $crate::log!(logger: $crate::__log_logger!($logger), target: $target, $crate::Level::Error, $($arg)+)
        170→    });
        172→    // error!(logger: my_logger, key1 = 42, key2 = true; "a {} event", "log")
        173→    // error!(logger: my_logger, "a {} event", "log")
        174→    (logger: $logger:expr, $($arg:tt)+) => ({
        175→        $crate::log!(logger: $crate::__log_logger!($logger), $crate::Level::Error, $($arg)+)
        176→    });
        178→    // error!(target: "my_target", key1 = 42, key2 = true; "a {} event", "log")
        179→    // error!(target: "my_target", "a {} event", "log")
        180→    (target: $target:expr, $($arg:tt)+) => ({
        181→        $crate::log!(target: $target, $crate::Level::Error, $($arg)+)
        182→    });
        184→    // error!("a {} event", "log")
        185→    ($($arg:tt)+) => ($crate::log!($crate::Level::Error, $($arg)+))
        186→}
        204→macro_rules! warn {
        205→    // warn!(logger: my_logger, target: "my_target", key1 = 42, key2 = true; "a {} event", "log")
        206→    // warn!(logger: my_logger, target: "my_target", "a {} event", "log")
        207→    (logger: $logger:expr, target: $target:expr, $($arg:tt)+) => ({
        208→        $crate::log!(logger: $crate::__log_logger!($logger), target: $target, $crate::Level::Warn, $($arg)+)
        209→    });
        211→    // warn!(logger: my_logger, key1 = 42, key2 = true; "a {} event", "log")
        212→    // warn!(logger: my_logger, "a {} event", "log")
        213→    (logger: $logger:expr, $($arg:tt)+) => ({
        214→        $crate::log!(logger: $crate::__log_logger!($logger), $crate::Level::Warn, $($arg)+)
        215→    });
        217→    // warn!(target: "my_target", key1 = 42, key2 = true; "a {} event", "log")
        218→    // warn!(target: "my_target", "a {} event", "log")
        219→    (target: $target:expr, $($arg:tt)+) => ({
        220→        $crate::log!(target: $target, $crate::Level::Warn, $($arg)+)
        221→    });
        223→    // warn!("a {} event", "log")
        224→    ($($arg:tt)+) => ($crate::log!($crate::Level::Warn, $($arg)+))
        225→}
        252→macro_rules! info {
        253→    // info!(logger: my_logger, target: "my_target", key1 = 42, key2 = true; "a {} event", "log")
        254→    // info!(logger: my_logger, target: "my_target", "a {} event", "log")
        255→    (logger: $logger:expr, target: $target:expr, $($arg:tt)+) => ({
        256→        $crate::log!(logger: $crate::__log_logger!($logger), target: $target, $crate::Level::Info, $($arg)+)
        257→    });
        259→    // info!(logger: my_logger, key1 = 42, key2 = true; "a {} event", "log")
        260→    // info!(logger: my_logger, "a {} event", "log")
        261→    (logger: $logger:expr, $($arg:tt)+) => ({
        262→        $crate::log!(logger: $crate::__log_logger!($logger), $crate::Level::Info, $($arg)+)
        263→    });
        265→    // info!(target: "my_target", key1 = 42, key2 = true; "a {} event", "log")
        266→    // info!(target: "my_target", "a {} event", "log")
        267→    (target: $target:expr, $($arg:tt)+) => ({
        268→        $crate::log!(target: $target, $crate::Level::Info, $($arg)+)
        269→    });
        271→    // info!("a {} event", "log")
        272→    ($($arg:tt)+) => ($crate::log!($crate::Level::Info, $($arg)+))
        273→}
        292→macro_rules! debug {
        293→    // debug!(logger: my_logger, target: "my_target", key1 = 42, key2 = true; "a {} event", "log")
        294→    // debug!(logger: my_logger, target: "my_target", "a {} event", "log")
        295→    (logger: $logger:expr, target: $target:expr, $($arg:tt)+) => ({
        296→        $crate::log!(logger: $crate::__log_logger!($logger), target: $target, $crate::Level::Debug, $($arg)+)
        297→    });
        299→    // debug!(logger: my_logger, key1 = 42, key2 = true; "a {} event", "log")
        300→    // debug!(logger: my_logger, "a {} event", "log")
        301→    (logger: $logger:expr, $($arg:tt)+) => ({
        302→        $crate::log!(logger: $crate::__log_logger!($logger), $crate::Level::Debug, $($arg)+)
        303→    });
        305→    // debug!(target: "my_target", key1 = 42, key2 = true; "a {} event", "log")
        306→    // debug!(target: "my_target", "a {} event", "log")
        307→    (target: $target:expr, $($arg:tt)+) => ({
        308→        $crate::log!(target: $target, $crate::Level::Debug, $($arg)+)
        309→    });
        311→    // debug!("a {} event", "log")
        312→    ($($arg:tt)+) => ($crate::log!($crate::Level::Debug, $($arg)+))
        313→}
        336→macro_rules! trace {
        337→    // trace!(logger: my_logger, target: "my_target", key1 = 42, key2 = true; "a {} event", "log")
        338→    // trace!(logger: my_logger, target: "my_target", "a {} event", "log")
        339→    (logger: $logger:expr, target: $target:expr, $($arg:tt)+) => ({
        340→        $crate::log!(logger: $crate::__log_logger!($logger), target: $target, $crate::Level::Trace, $($arg)+)
        341→    });
        343→    // trace!(logger: my_logger, key1 = 42, key2 = true; "a {} event", "log")
        344→    // trace!(logger: my_logger, "a {} event", "log")
        345→    (logger: $logger:expr, $($arg:tt)+) => ({
        346→        $crate::log!(logger: $crate::__log_logger!($logger), $crate::Level::Trace, $($arg)+)
        347→    });
        349→    // trace!(target: "my_target", key1 = 42, key2 = true; "a {} event", "log")
        350→    // trace!(target: "my_target", "a {} event", "log")
        351→    (target: $target:expr, $($arg:tt)+) => ({
        352→        $crate::log!(target: $target, $crate::Level::Trace, $($arg)+)
        353→    });
        355→    // trace!("a {} event", "log")
        356→    ($($arg:tt)+) => ($crate::log!($crate::Level::Trace, $($arg)+))
        357→}
        391→macro_rules! log_enabled {
        392→    // log_enabled!(logger: my_logger, target: "my_target", Level::Info)
        393→    (logger: $logger:expr, target: $target:expr, $lvl:expr) => ({
        394→        $crate::__log_enabled!(logger: $crate::__log_logger!($logger), target: $target, $lvl)
        395→    });
        397→    // log_enabled!(logger: my_logger, Level::Info)
        398→    (logger: $logger:expr, $lvl:expr) => ({
        399→        $crate::__log_enabled!(logger: $crate::__log_logger!($logger), target: $crate::__private_api::module_path!(), $lvl)
        400→    });
        402→    // log_enabled!(target: "my_target", Level::Info)
        403→    (target: $target:expr, $lvl:expr) => ({
        404→        $crate::__log_enabled!(logger: $crate::__log_logger!(__log_global_logger), target: $target, $lvl)
        405→    });
        407→    // log_enabled!(Level::Info)
        408→    ($lvl:expr) => ({
        409→        $crate::__log_enabled!(logger: $crate::__log_logger!(__log_global_logger), target: $crate::__private_api::module_path!(), $lvl)
        410→    });
        411→}
        415→macro_rules! __log_enabled {
        …
        429→macro_rules! __log_logger {
        …
        445→macro_rules! __log_key {
        …
        459→macro_rules! __log_key {
        …
        468→macro_rules! __log_value {
        …
        517→macro_rules! __log_value {
        …
        526→macro_rules! __log_value_sval {
        …
        535→macro_rules! __log_value_sval {
        …
        544→macro_rules! __log_value_serde {
        …
        553→macro_rules! __log_value_serde {
        …
        564→macro_rules! __log_value_error {
        …
        573→macro_rules! __log_value_error {
        …
    serde.rs
test_max_level_features/
    Cargo.toml
        1→[package]
        2→name = "optimized"
        3→version = "0.1.0"
        4→edition = "2021"
        5→publish = false
        7→[[bin]]
        8→name = "test_max_level_features"
        9→path = "main.rs"
    main.rs
        1→use log::{debug, error, info, trace, warn, Level, LevelFilter, Log, Metadata, Record};
        2→use std::sync::{Arc, Mutex};
        5→use log::set_boxed_logger;
        17→impl Log for Logger {
        18→    fn enabled(&self, _: &Metadata) -> bool {
        …
        22→    fn log(&self, record: &Record) {
        …
        26→    fn flush(&self) {}
        …
tests/
    integration.rs
    macros.rs
triagebot.toml
